# src/app/core/openapi/lingua-poly/model/models.ts
@@ -1,3 +1,4 @@
+export * from './defaultResponse';
 export * from './token';
 export * from './user';
 export * from './userDraft';
